BUG#9922 - INSERT SELECT with UNIONs allows concurrent INSERTs don't set lex->lock_option=TL_READ in the parser for SELECT