sql/sql_lex.cc
@@ -147,6 +147,7 @@ LEX *lex_start(THD *thd, uchar *buf,uint length)
   lex->select->in_sum_expr=0;
   lex->select->expr_list.empty();
   lex->select->ftfunc_list.empty();
+  lex->lock_option=TL_READ;
   lex->convert_set=(lex->thd=thd)->variables.convert_set;
   lex->yacc_yyss=lex->yacc_yyvs=0;
   lex->ignore_space=test(thd->sql_mode & MODE_IGNORE_SPACE);
