sql/sql_yacc.yy
@@ -1531,7 +1531,6 @@ select_init:
 select_part2:
 	{
 	  LEX *lex=Lex;
-	  lex->lock_option=TL_READ;
           mysql_init_select(lex);
 	}
 	select_options select_item_list select_into select_lock_type;
